force-app/main/default/objects/SiteNotificationRecipient__c/SiteNotificationRecipient__c.object-meta.xml
<CustomObject>
    <label>SiteNotificationRecipient</label>
    <nameField>
        <displayFormat>NR{00000000}</displayFormat>
        <label>Recipient Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SiteNotificationRecipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>