force-app/main/default/objects/SiteNotificationRecipient__c/fields/SiteNotification__c.field-meta.xml
<CustomField>
    <fullName>SiteNotification__c</fullName>
    <label>SiteNotification</label>
    <referenceTo>SiteNotification__c</referenceTo>
    <relationshipLabel>SiteNotificationRecipients</relationshipLabel>
    <relationshipName>SiteNotificationRecipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>