force-app/main/default/objects/SiteNotificationRecipient__c/fields/SiteUser__c.field-meta.xml
<CustomField>
    <fullName>SiteUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUser</label>
    <referenceTo>SiteUser__c</referenceTo>
    <relationshipLabel>SiteNotificationRecipients</relationshipLabel>
    <relationshipName>SiteNotificationRecipients</relationshipName>
    <type>Lookup</type>
</CustomField>